--- a/NetTelegraph.Test/packages.config
+++ b/NetTelegraph.Test/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Mock4Net.Core" version="1.0.0-v20150608-4f463ad" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net45" />
   <package id="NUnit" version="3.9.0" targetFramework="net45" />
 </packages>
