--- a/NetTelegraph.Test/packages.config
+++ b/NetTelegraph.Test/packages.config
@@ -3,4 +3,5 @@
   <package id="Mock4Net.Core" version="1.0.0-v20150608-4f463ad" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net45" />
   <package id="NUnit" version="3.9.0" targetFramework="net45" />
+  <package id="RestSharp" version="105.2.3" targetFramework="net45" />
 </packages>
