--- a/NetTelegraph/NetTelegraph.csproj
+++ b/NetTelegraph/NetTelegraph.csproj
@@ -48,6 +48,11 @@
     <Compile Include="TelegraphBot.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Type\Account.cs" />
+    <Compile Include="Type\Node.cs" />
+    <Compile Include="Type\NodeElements.cs" />
+    <Compile Include="Type\Page.cs" />
+    <Compile Include="Type\PageList.cs" />
+    <Compile Include="Type\PageViews.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
