--- a/NetTelegraph/NetTelegraph.csproj
+++ b/NetTelegraph/NetTelegraph.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="Enum\Attrs.cs" />
     <Compile Include="Enum\Tag.cs" />
+    <Compile Include="Interface\Node.cs" />
     <Compile Include="Result\AccountResult.cs" />
     <Compile Include="TelegraphBot.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
