Added: PageResult, PageResultResponse (in tests), added PageResult type as returned in TelegraphBot. Ignore fails test

--- a/NetTelegraph/NetTelegraph.csproj
+++ b/NetTelegraph/NetTelegraph.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Enum\Tag.cs" />
     <Compile Include="Interface\Node.cs" />
     <Compile Include="Result\AccountResult.cs" />
+    <Compile Include="Result\PageResult.cs" />
     <Compile Include="TelegraphBot.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Type\Account.cs" />
