--- a/NetTelegraph/NetTelegraph.csproj
+++ b/NetTelegraph/NetTelegraph.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Enum\Tag.cs" />
     <Compile Include="Interface\INode.cs" />
     <Compile Include="Result\AccountResult.cs" />
+    <Compile Include="Result\PageListResult.cs" />
     <Compile Include="Result\PageResult.cs" />
     <Compile Include="TelegraphBot.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
