--- a/NetTelegraph/NetTelegraph.csproj
+++ b/NetTelegraph/NetTelegraph.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Result\AccountResult.cs" />
     <Compile Include="Result\PageListResult.cs" />
     <Compile Include="Result\PageResult.cs" />
+    <Compile Include="Result\PageViewsResult.cs" />
     <Compile Include="TelegraphBot.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Type\Account.cs" />
